; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/extr_ttyprintk.c_tpk_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/extr_ttyprintk.c_tpk_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.ttyprintk_port* }
%struct.ttyprintk_port = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*, i8*, i32)* @tpk_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tpk_write(%struct.tty_struct* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.tty_struct*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ttyprintk_port*, align 8
  %8 = alloca i32, align 4
  store %struct.tty_struct* %0, %struct.tty_struct** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %10 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %9, i32 0, i32 0
  %11 = load %struct.ttyprintk_port*, %struct.ttyprintk_port** %10, align 8
  store %struct.ttyprintk_port* %11, %struct.ttyprintk_port** %7, align 8
  %12 = load %struct.ttyprintk_port*, %struct.ttyprintk_port** %7, align 8
  %13 = getelementptr inbounds %struct.ttyprintk_port, %struct.ttyprintk_port* %12, i32 0, i32 0
  %14 = call i32 @mutex_lock(i32* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @tpk_printk(i8* %15, i32 %16)
  store i32 %17, i32* %8, align 4
  %18 = load %struct.ttyprintk_port*, %struct.ttyprintk_port** %7, align 8
  %19 = getelementptr inbounds %struct.ttyprintk_port, %struct.ttyprintk_port* %18, i32 0, i32 0
  %20 = call i32 @mutex_unlock(i32* %19)
  %21 = load i32, i32* %8, align 4
  ret i32 %21
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @tpk_printk(i8*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
